# Mini-Projet-Docker

./: Dockerfile.api  Dockerfile.train  README.md  app_api.py  dl-optimiser.ipynb  docker-compose.yml  predictions.csv  pyproject.toml  requirements.txt  test_api.py
models/: best_model.pth  features.json  scaler.joblib
src/: model.py  predict.py  train.py  utils.py
