[project]
name = "env"
version = "0.1.0"
description = ""
authors = [
    {name = "Falleiz",email = "rosteimfalleizbelemcoabga@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=3.0.0,<4.0.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "scipy (>=1.17.0,<2.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "xgboost (>=3.1.3,<4.0.0)",
    "fastapi (>=0.128.3,<0.129.0)",
    "uvicorn[standard] (>=0.40.0,<0.41.0)",
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
